--- a/AutoClick/Pages/Shared/_Layout.cshtml
+++ b/AutoClick/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="~/css/responsive-mobile.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/responsive-tablet.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/index-responsive.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/producto-responsive.css" asp-append-version="true" />
     
     @await RenderSectionAsync("Styles", required: false)
     
