--- a/AutoClick/Pages/Shared/_HeaderResponsive.cshtml
+++ b/AutoClick/Pages/Shared/_HeaderResponsive.cshtml
@@ -50,6 +50,7 @@
             
             <!-- Main Navigation -->
             <a asp-page="/BusquedaAvanzada" class="menu-item menu-item-primary">Explorar todos los autos</a>
+            <div class="menu-divider"></div>
             
             <!-- Anúnciese Section -->
             <button class="menu-section-btn" data-section="anunciese">
