Several fix implementations

--- a/AutoClick/Pages/AnunciarEmpresa.cshtml
+++ b/AutoClick/Pages/AnunciarEmpresa.cshtml
@@ -827,9 +827,9 @@
     <section class="trusted-brands">
         <h2 class="brands-title">Marcas que ya confían en nosotros</h2>
     <div class="brands-container">
-        <img src="https://placehold.co/285x79" alt="Marca 1" class="brand-logo" />
-        <img src="https://placehold.co/226x169" alt="Marca 2" class="brand-logo" />
-        <img src="https://placehold.co/236x236" alt="Marca 3" class="brand-logo" />
+        <img src="~/images/logos/rainx-logo.png" alt="Rain-X" class="brand-logo" />
+        <img src="~/images/logos/raloy-logo.png" alt="Raloy" class="brand-logo" />
+        <img src="~/images/logos/gumout-logo.png" alt="Gumout" class="brand-logo" />
     </div>
 </section>
 
